# evlogstudio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  build_dev.sh  docker-compose.s3.yml  docker-compose.yml  evlog-design.md  fly.toml  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/auth/: middleware.rs  mod.rs
src/db/: mod.rs  schema.rs
src/ingest/: mod.rs  normalize.rs  schema.rs
src/routes/: analytics.rs  auth.rs  config.rs  dashboards.rs  health.rs  ingest.rs  logs.rs  mod.rs  query.rs  schema.rs  sources.rs  static_files.rs  users.rs
tests/: auth_integration.rs  common.rs  ingest_integration.rs  test_ingest.ps1
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css
ui/src/lib/: api.ts  stores.ts  treeUtils.ts  types.ts  utils.ts
ui/src/lib/components/analytics/: MetricCard.svelte  TopValues.svelte  VolumeChart.svelte
ui/src/lib/components/common/: Badge.svelte  ConfirmModal.svelte  CustomSelect.svelte  EmptyState.svelte  FieldPicker.svelte  Modal.svelte  PanelHeader.svelte  SourceMultiSelect.svelte  StatusRow.svelte
ui/src/lib/components/dashboard/: DashboardCard.svelte  QueryBuilder.svelte  WidgetBarChart.svelte  WidgetConfigModal.svelte  WidgetContainer.svelte  WidgetLineChart.svelte  WidgetNumber.svelte  WidgetRenderer.svelte  WidgetTable.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/(app)/: +layout.svelte  +layout.ts
ui/src/routes/login/: +page.svelte
ui/src/routes/setup/: +page.svelte
(+15 files in other folders)
