[package]
name = "evlogagent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evlogagent"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["json", "macros"] }
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
duckdb          = { version = "1", features = ["bundled"] }
uuid            = { version = "1", features = ["v4"] }
chrono          = { version = "0.4", features = ["serde"] }
envy            = "0.4"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror       = "1"
tower-http      = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken    = "9"
argon2          = "0.5"
rand            = "0.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
axum-test       = "15"
tokio           = { version = "1", features = ["full"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
